--- a/package.json
+++ b/package.json
@@ -21,8 +21,14 @@
     "@angular/platform-server": "^18.0.0",
     "@angular/router": "^18.0.0",
     "@angular/ssr": "^18.0.6",
+    "@fortawesome/angular-fontawesome": "^0.15.0",
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "express": "^4.18.2",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.12.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
